--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-spring.jpa.hibernate.ddl-auto=update
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/manageproject
+spring.datasource.username = root
+spring.datasource.password = Server@123*
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
